--- a/CircuitBreakerPlanner/index.html
+++ b/CircuitBreakerPlanner/index.html
@@ -4,18 +4,18 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<link rel="icon" href="favicon.ico">
 	<title>Circuit Breaker Planner</title>
 </head>
 <body>
 	<noscript>
 		<strong>We're sorry but Circuit Breaker Planner doesn't work without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
-	<div id="app"></div>
+	<div id="appContainer"></div>
 	<script src="qrcode.js"></script>
 	<script src="datamatrix.min.js"></script>
 	<script src="lz-string.min.js"></script>
-	<!-- built files will be auto injected -->
+	<script type="module" src="src/main.js"></script>
 </body>
 
 </html>
